syntax = "proto3";

package v1.channel;
option go_package = "mist/src/protos/v1/channel;channel";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service ChannelService {
  // ----- CHANNEL ----
  rpc CreateChannel(CreateChannelRequest) returns (CreateChannelResponse);
  rpc GetByIdChannel(GetByIdChannelRequest) returns (GetByIdChannelResponse);
  rpc ListChannels(ListChannelsRequest) returns (ListChannelsResponse);
  rpc DeleteChannel(DeleteChannelRequest) returns (DeleteChannelResponse);
}

// RESOURCES

message Channel {
  string id = 1;
  string name = 2;
  string appserver_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// ----- Channel -----
message CreateChannelRequest {
  string name = 1 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 64
  ];
  string appserver_id = 2 [ (buf.validate.field).string.uuid = true ];
}
message CreateChannelResponse { Channel channel = 1; }

message GetByIdChannelRequest {
  string id = 1 [ (buf.validate.field).string.uuid = true ];
}
message GetByIdChannelResponse { Channel channel = 1; }

message ListChannelsRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue appserver_id = 2;
}
message ListChannelsResponse { repeated Channel channels = 1; }

message DeleteChannelRequest {
  string id = 1 [ (buf.validate.field).string.uuid = true ];
}
message DeleteChannelResponse {}
